feat: Improve SEO and social sharing meta tags
Updates the page title and meta tags to improve search engine optimization and how the page appears when shared on social media platforms. This includes adding Open Graph and Twitter card metadata for better preview generation.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nguyễn Nam BĐS - Kho Quà Tặng Môi Giới Chuyên Nghiệp</title>
+    <title>Kho Quà Tặng Môi Giới Chuyên Nghiệp - Nguyễn Nam BĐS</title>
     <meta name="description" content="Kho quà tặng đặc biệt giúp bạn đột phá giao dịch và nâng tầm kỹ năng tư vấn bất động sản. Được biên soạn bởi Nguyễn Nam BĐS." />
     <meta name="author" content="Nguyễn Nam BĐS" />
-    <meta property="og:title" content="Nguyễn Nam BĐS - Kho Quà Tặng Môi Giới Chuyên Nghiệp" />
+    <meta property="og:title" content="Kho Quà Tặng Môi Giới Chuyên Nghiệp - Nguyễn Nam BĐS" />
     <meta property="og:description" content="Kho quà tặng đặc biệt giúp bạn đột phá giao dịch và nâng tầm kỹ năng tư vấn bất động sản." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://i.postimg.cc/GtngZLrM/nam_nho.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kho Quà Tặng Môi Giới Chuyên Nghiệp - Nguyễn Nam BĐS" />
+    <meta name="twitter:description" content="Kho quà tặng đặc biệt giúp bạn đột phá giao dịch và nâng tầm kỹ năng tư vấn bất động sản." />
+    <meta name="twitter:image" content="https://i.postimg.cc/GtngZLrM/nam_nho.jpg" />
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎁</text></svg>" />
   </head>
   <body>
